style minor fix

--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
       <div id="shutter"><p class="avatar"><b><img src="./assets/images/photo_small.jpg" alt="photo"></b><i></i></p></div>
       <div class="notice"><p class="yob">asdf</p><p>Hello you~</p></div>
       <ul class="links">
-        <li><span class="icon_toolbox_alt"></span> <a href="./portfolio.html" rel="nofollow" title="Portfolio">Portfolio</a><i></i></li>
-        <!-- <li><span class="social_facebook"></span> <a href="https://www.facebook.com/" target="_blank" rel="nofollow" title="Facebook">Facebook profile</a><i></i></li>
-        <li><span class="social_twitter"></span> <a href="https://www.twitter.com/" target="_blank" rel="nofollow" title="Tweets">Twitter tweets</a><i></i></li> -->
-        <li><span class="social_wordpress"></span> <a href="https://www.wordpress.com/" target="_blank" rel="nofollow" title="Blog">WordPress blog</a><i></i></li>
-        <li><span class="icon_camera_alt"></span> <a href="https://www.flickr.com/photos/dong/" target="_blank" rel="nofollow" title="Photos">Flickr photos</a><i></i></li>
-        <li><span class="icon_film"></span> <a href="./vlog.html" rel="nofollow" title="Videos">Videos</a><i></i></li>
+        <li title="Portfolio"><span class="icon_toolbox_alt"></span> <a href="./portfolio.html" rel="nofollow">Portfolio</a><i></i></li>
+        <!-- <li title="Facebook"><span class="social_facebook"></span> <a href="https://www.facebook.com/" target="_blank" rel="nofollow">Facebook profile</a><i></i></li>
+        <li title="Tweets"><span class="social_twitter"></span> <a href="https://www.twitter.com/" target="_blank" rel="nofollow">Twitter tweets</a><i></i></li> -->
+        <li title="Blog"><span class="social_wordpress"></span> <a href="https://www.wordpress.com/" target="_blank" rel="nofollow">WordPress blog</a><i></i></li>
+        <li title="Photos"><span class="icon_camera_alt"></span> <a href="https://www.flickr.com/photos/dong/" target="_blank" rel="nofollow">Flickr photos</a><i></i></li>
+        <li title="Videos"><span class="icon_film"></span> <a href="./vlog.html" rel="nofollow">Videos</a><i></i></li>
       </ul>
     </div>
     <div class="footer">&copy; 2025 some rights reserved.</div>
