--- a/reb/products/product_01.html
+++ b/reb/products/product_01.html
@@ -8,7 +8,7 @@
     <title>Esmolol Hydrochloride Injection - Products / 瑞柏思生物医药</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../assets/bootstrap-4.0.0-beta-dist/css/bootstrap.min.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
     <link rel="stylesheet" href="../assets/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="../assets/style.css">
   </head>
@@ -22,7 +22,7 @@
       <header>
         <nav class="navbar navbar-light container" id="logobar">
           <a class="navbar-brand" href="../index.html">
-            <img src="../images/site_logo.png" width="313" height="58" alt="">
+            <img src="../assets/images/site_logo.png" width="313" height="58" alt="">
           </a>
           <form class="form-inline" id="global-search">
             <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
@@ -84,21 +84,21 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item carousel-01 active">
-              <img class="d-block w-100" src="../images/product_01_carousel.jpg" alt="First slide">
+              <img class="d-block w-100" src="../assets/images/product_01_carousel.jpg" alt="First slide">
               <div class="carousel-caption d-none d-md-block">
                 <h3>Product Title</h3>
                 <p>What this is</p>
               </div>
             </div>
             <div class="carousel-item carousel-02">
-              <img class="d-block w-100" src="../images/product_02_carousel.jpg" alt="Second slide">
+              <img class="d-block w-100" src="../assets/images/product_02_carousel.jpg" alt="Second slide">
               <div class="carousel-caption d-none d-md-block">
                 <h3>Product Title</h3>
                 <p>What this is</p>
               </div>
             </div>
             <div class="carousel-item carousel-03">
-              <img class="d-block w-100" src="../images/product_03_carousel.jpg" alt="Third slide">
+              <img class="d-block w-100" src="../assets/images/product_03_carousel.jpg" alt="Third slide">
               <div class="carousel-caption d-none d-md-block">
                 <h3>Product Title</h3>
                 <p>What this is</p>
@@ -271,9 +271,8 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script type="text/javascript" src="../assets/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="../assets/popper.min.js"></script>
-    <script type="text/javascript" src="../assets/bootstrap-4.0.0-beta-dist/js/bootstrap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
     <script type="text/javascript">
       var wrap = $(window);
       var header = $("#site-header");
