--- a/portfolio.html
+++ b/portfolio.html
@@ -2,6 +2,7 @@
 <html lang="zh-TW">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
   <title>Portfolio</title>
   <!-- <script type="text/javascript" src="./assets/drawdown.js"></script> -->
   <script type="text/javascript" src="./assets/markdown-it.min.js"></script>
